# healthomics-lab-orchestrator

./: .gitignore  Makefile  README.md  main.nf  nextflow.config  pyproject.toml
.github/workflows/: ci.yml
data/: .gitignore  README.md  manifest.yaml  samples.csv
docs/: architecture.md  tooling-versions.md  what-is-out-of-scope.md
docs/release-notes/: v0.1.md
scripts/: run_lab.sh
src/healthomics_lab/: __init__.py  audit.py  canary.py  pipeline.py  process_hooks.py
tests/: test_canary.py  test_manifest.py  test_pipeline.py  test_process_hooks.py
