[project]
name = "healthomics_lab"
version = "0.2.0"
description = "RNA-seq pipeline orchestrated via Nextflow DSL2 on lab infra, mirroring the nf-core/rnaseq DAG with audit-chained substrate hooks."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "H. Ryan Kim" },
]
requires-python = ">=3.11"

dependencies = [
    "click>=8.1.7",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "mlflow>=2.11.0",
    "ipykernel>=6.29.0",
    "nbconvert>=7.16.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
healthomics_lab = "healthomics_lab.pipeline:cli"
healthomics-emit = "healthomics_lab.process_hooks:cli"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/healthomics_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src"]   # run tests from a fresh clone (no editable install needed)
